--- a/CSS/Gradient.html
+++ b/CSS/Gradient.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Alignment of Text</title>
+	<title>Gradient</title>
 	<link rel="stylesheet" type="text/css" href="../Assets/bulma.css">
 	<link rel="stylesheet" type="text/css" href="../Assets/Style.css">
 </head>
@@ -14,11 +14,13 @@
 
 <h1>Gradient</h1>
 <p>CSS gradients let you display smooth transitions between two or more specified colors.</p>
-<p>There are two types of Gradient -</p>
-<ul>
+<p>There are two types of Gradient:</p>
+<ol>
 	<li>Linear Gradient</li>
 	<li>Radial Gradient</li>
-</ul>
+</ol>
+
+
 <h1>Linear Gradient</h1>
 <p>To create a linear gradient you must define at least two color stops. Color stops are the colors you want to render smooth transitions among. You can also set a starting point and a direction (or an angle) along with the gradient effect.</p>
 <pre>
@@ -33,8 +35,10 @@ background: linear-gradient(direction, color-stop1, color-stop2, ...);
     background: linear-gradient(red, yellow);
 }
 </pre>
-<div class="box" style="background: linear-gradient(red, yellow); height: 50px;">
+<div class="SnippetDemo">
+  <div style="background: linear-gradient(red, yellow); height: 100px; width: 100px;"></div>
 </div>
+
 
 
 <h3>Left to right</h3>
@@ -43,7 +47,10 @@ background: linear-gradient(direction, color-stop1, color-stop2, ...);
   background: linear-gradient(to right, red , yellow);
 }
 </pre>
-<div class="box" style="background: linear-gradient(to right, red, yellow); height: 50px;"></div>
+<div class="SnippetDemo">
+  <div style="background: linear-gradient(to right, red, yellow); height: 100px; width: 100px;"></div>
+</div>
+
 
 
 <h3>Diagonal</h3>
@@ -54,25 +61,33 @@ background: linear-gradient(direction, color-stop1, color-stop2, ...);
   background: linear-gradient(to bottom right, red, yellow);
 }
 </pre>
-<div class="box" style="background: linear-gradient(to bottom right, red, yellow); height: 100px; width: 100px;"></div>
+<div class="SnippetDemo">
+  <div style="background: linear-gradient(to bottom right, red, yellow); height: 100px; width: 100px;"></div>
+</div>
 <pre>
 #grad {
   background: linear-gradient(to top right, red, yellow);
 }
 </pre>
-<div class="box" style="background: linear-gradient(to top right, red, yellow); height: 100px; width: 100px;"></div>
+<div class="SnippetDemo">
+  <div style="background: linear-gradient(to top right, red, yellow); height: 100px; width: 100px;"></div>
+</div>
 <pre>
 #grad {
   background: linear-gradient(to top left, red, yellow);
 }
 </pre>
-<div class="box" style="background: linear-gradient(to top left, red, yellow); height: 100px; width: 100px;"></div>
+<div class="SnippetDemo">
+  <div style="background: linear-gradient(to top left, red, yellow); height: 100px; width: 100px;"></div>
+</div>
 <pre>
 #grad {
   background: linear-gradient(to bottom left, red, yellow);
 }
 </pre>
-<div class="box" style="background: linear-gradient(to bottom left, red, yellow); height: 100px; width: 100px;"></div>
+<div class="SnippetDemo">
+  <div style="background: linear-gradient(to bottom left, red, yellow); height: 100px; width: 100px;"></div>
+</div>
 
 
 <h3>Using Angle</h3>
@@ -85,44 +100,54 @@ background: linear-gradient(angle, color-stop1, color-stop2);
   background: linear-gradient(64deg, red, yellow);
 }
 </pre>
-<div class="box" style="background: linear-gradient(64deg, red, yellow); height: 100px; width: 100px;"></div>
-<p>You can also use negative deg like this -</p>
+<div class="SnippetDemo">
+  <div style="background: linear-gradient(64deg, red, yellow); height: 100px; width: 100px;"></div>
+</div>
+<p>You can also use negative deg like this:</p>
 <pre>
 #grad {
   background: linear-gradient(-64deg, red, yellow);
 }
 </pre>
-<div class="box" style="background: linear-gradient(-64deg, red, yellow); height: 100px; width: 100px;"></div>
+<div class="SnippetDemo">
+  <div style="background: linear-gradient(-64deg, red, yellow); height: 100px; width: 100px;"></div>
+</div>
 
 
 <h3>Using Multiple Colors</h3>
-<p>You can use as many color as you want -</p>
+<p>You can use as many color as you want:</p>
 <pre>
 #grad {
   background: linear-gradient(red, yellow, green);
 }
 </pre>
-<div class="box" style="background: linear-gradient(red, yellow, green); height: 100px;"></div>
+<div class="SnippetDemo">
+  <div style="background: linear-gradient(red, yellow, green); height: 100px; width: 100px;"></div>
+</div>
 
 
 <h3>Repeating a linear-gradient</h3>
-<p>The repeating-linear-gradient() function is used to repeat linear gradients:</p>
+<p>The <code>repeating-linear-gradient()</code> function is used to repeat linear gradients:</p>
 <pre>
 #grad {
   background: repeating-linear-gradient(red, yellow 10%, green 20%);
 }
 </pre>
-<div class="box" style="background: repeating-linear-gradient(red, yellow 10%, green 20%); height: 100px;"></div>
+<div class="SnippetDemo">
+  <div style="background: repeating-linear-gradient(red, yellow 10%, green 20%); height: 100px; width: 100px;"></div>
+</div>
 
 
 <h3>Specifying Color Stops</h3>
 <p>You can also declare where you want any particular color to "start". Those are called "color-stops". Say you wanted yellow to take up the majority of the space, but red only a little bit in the beginning, you could make the yellow color-stop pretty early:</p>
 <pre>
 #grad {
-  background-image:linear-gradient(to right, red,yellow 40%);
+  background-image: linear-gradient(to right, red, yellow 40%);
 }
 </pre>
-<div class="box" style="background: linear-gradient(red, yellow, green 40%); height: 100px;"></div>
+<div class="SnippetDemo">
+  <div style="background: linear-gradient(to right, red, yellow 40%); height: 100px; width: 100px;"></div>
+</div>
 
 
 <h1>Radial Gradient</h1>
@@ -134,26 +159,35 @@ background: radial-gradient(shape size at position, start-color, ..., last-color
 #grad {
   background: radial-gradient(red, yellow);
 }
+
+&lt;div class="mr-2" style="background: radial-gradient(red, yellow); height: 100px; width: 100px;">&lt;/div>
+&lt;div style="background: radial-gradient(red, yellow); height: 100px; width: 400px;">&lt;/div>
 </pre>
-<div class="box" style="background: radial-gradient(red, yellow); height: 100px; width: 100px;"></div>
-<div class="box" style="background: radial-gradient(red, yellow); height: 100px; width: 400px;"></div>
+<div class="SnippetDemo">
+  <div class="mr-2" style="background: radial-gradient(red, yellow); height: 100px; width: 100px;"></div>
+  <div style="background: radial-gradient(red, yellow); height: 100px; width: 400px;"></div>
+</div>
 <p>The above two example are the same except the last one is ellipse. So if you increase the width, the gradient is graducally become ellipse. To stop this behaviour you can go following approach.</p>
 
 
 <h3>Specifying Shape</h3>
-<p>The shape parameter defines the shape. It can take the value circle or ellipse. The default value is ellipse.</p>
+<p>The shape parameter defines the shape. It can take the value <code>circle</code> or <code>ellipse</code>. The default value is <code>ellipse</code>.</p>
 <pre>
 #grad {
-  background: radial-gradient(circle, red, yellow, green);
+  background: radial-gradient(circle, red, yellow);
 }
 </pre>
-<div class="box" style="background: radial-gradient(circle, red, yellow); height: 100px; width: 400px;"></div>
+<div class="SnippetDemo">
+  <div style="background: radial-gradient(circle, red, yellow); height: 100px; width: 400px;"></div>
+</div>
 <pre>
 #grad {
-  background: radial-gradient(ellipse, red, yellow, green);
+  background: radial-gradient(ellipse, red, yellow);
 }
 </pre>
-<div class="box" style="background: radial-gradient(ellipse, red, yellow); height: 100px; width: 400px;"></div>
+<div class="SnippetDemo">
+  <div style="background: radial-gradient(ellipse, red, yellow); height: 100px; width: 400px;"></div>
+</div>
 
 
 <h3>Specifying Color Stops</h3>
@@ -163,27 +197,31 @@ background: radial-gradient(shape size at position, start-color, ..., last-color
   background: radial-gradient(red 5%, yellow 15%, green 60%);
 }
 </pre>
-<div class="box" style="background: radial-gradient(red 5%, yellow 15%, green 60%); height: 100px; width: 400px;"></div>
+<div class="SnippetDemo">
+  <div style="background: radial-gradient(red 5%, yellow 15%, green 60%); height: 100px; width: 400px;"></div>
+</div>
 
 
 <h3>Repeating a radial-gradient</h3>
-<p>The repeating-radial-gradient() function is used to repeat radial gradients:</p>
+<p>The <code>repeating-radial-gradient()</code> function is used to repeat radial gradients:</p>
 <pre>
 #grad {
   background: repeating-radial-gradient(red, yellow 10%, green 15%);
 }
 </pre>
-<div class="box" style="background: repeating-radial-gradient(red 5%, yellow 15%, green 60%); height: 100px; width: 400px;"></div>
+<div class="SnippetDemo">
+  <div style="background: repeating-radial-gradient(red 5%, yellow 15%, green 60%); height: 100px; width: 400px;"></div>
+</div>
 
 
 <h3>Use of Different Size Keywords</h3>
 <p>The size parameter defines the size of the gradient. It can take four values:</p>
-<ul>
-	<li><code>closest-side</code> ensures that the entire graient will be visible within the element.</li>
-	<li>farthest-side</li>
-	<li>closest-corner</li>
-	<li>farthest-corner</li>
-</ul>
+<ol>
+	<li><code>closest-side</code> : It ensures that the entire graient will be visible within the element. That means the ending edge of the gradient will be within the closest side. A rectange box has 4 sides, so the closest side from the gradient center will be used to determine the gradient shape.</li>
+	<li><code>farthest-side</code>: The ending edge of the gradient will expand up to the farthest side from the gradient center. That is why this shape is bigger than <code>closest-side</code>.</li>
+	<li><code>closest-corner</code>: The ending edge of the gradient will expand upto the closest corner.</li>
+	<li><code>farthest-corner</code>: The ending edge of the gradient will expand upto farthest-corner. That is why this shape is bigger than <code>closest-corner</code> shape.</li>
+</ol>
 <pre>
 #grad1 {
   background: radial-gradient(closest-side at 60% 55%, red, yellow, black);
@@ -193,8 +231,12 @@ background: radial-gradient(shape size at position, start-color, ..., last-color
   background: radial-gradient(farthest-side at 60% 55%, red, yellow, black);
 }
 </pre>
-<div class="box" style="background: radial-gradient(closest-side at 60% 55%, red, yellow, black); height: 300px;"></div>
-<div class="box" style="background: radial-gradient(farthest-side at 60% 55%, red, yellow, black); height: 300px;"></div>
+<div class="SnippetDemo">
+  <div class="mr-2" style="background: radial-gradient(closest-side at 60% 55%, red, yellow, black); height: 300px; width: 300px;"></div>
+  <div style="background: radial-gradient(farthest-side at 60% 55%, red, yellow, black); height: 300px; width: 300px;"></div>
+</div>
+
+
 <p>You can also use gradient shape, but must remember that you should not give any comma after the shape value.</p>
 <pre>
 #grad1 {
@@ -204,8 +246,11 @@ background: radial-gradient(shape size at position, start-color, ..., last-color
   background: radial-gradient(circle farthest-side at 60% 55%, red, yellow, black);
 }
 </pre>
-<div class="box" style="background: radial-gradient(circle closest-side at 60% 55%, red, yellow, black); height: 300px;"></div>
-<div class="box" style="background: radial-gradient(circle farthest-side at 60% 55%, red, yellow, black); height: 300px;"></div>
+<div class="SnippetDemo">
+  <div class="mr-2" style="background: radial-gradient(circle closest-side at 60% 55%, red, yellow, black); height: 300px; width: 300px;"></div>
+  <div style="background: radial-gradient(circle farthest-side at 60% 55%, red, yellow, black); height: 300px; width: 300px;"></div>
+</div>
+
 <pre>
 #grad1 {
   background: radial-gradient(circle closest-corner at 60% 55%, red, yellow, black);
@@ -214,19 +259,25 @@ background: radial-gradient(shape size at position, start-color, ..., last-color
   background: radial-gradient(circle farthest-corner at 60% 55%, red, yellow, black);
 }
 </pre>
-<div class="box" style="background: radial-gradient(circle closest-corner at 60% 55%, red, yellow, black); height: 300px;"></div>
-<div class="box" style="background: radial-gradient(circle farthest-corner at 60% 55%, red, yellow, black); height: 300px;"></div>
+<div class="SnippetDemo">
+  <div class="mr-2" style="background: radial-gradient(circle closest-corner at 60% 55%, red, yellow, black); height: 300px; width: 300px;"></div>
+  <div style="background: radial-gradient(circle farthest-corner at 60% 55%, red, yellow, black); height: 300px; width: 300px;"></div>
+</div>
+
 
 
 
 <h3>Starting from Another position</h3>
-<p>A radial gradient doesn't have to start at the default center either, you can specify a certain point by using "at ______" as part of the first parameter, like:</p>
+<p>A radial gradient doesn't have to start at the default center either, you can specify a certain point by using <code>at</code> as part of the first parameter, like:</p>
 <pre>
 #grad2 {
    background: radial-gradient( circle at top right, yellow, #f06d06 50%);
 }
 </pre>
-<div class="box" style="background: radial-gradient( circle at top right, yellow, #f06d06 50%); height: 300px;"></div>
+<div class="SnippetDemo">
+  <div style="background: radial-gradient( circle at top right, yellow, #f06d06 50%); height: 300px; width: 300px;"></div>
+</div>
+
 
 
 
