--- a/CSS/TOC.html
+++ b/CSS/TOC.html
@@ -198,7 +198,7 @@
 				</li>
 				<li>
 					<a href="Gradient.html">Gradient</a>
-					<p class="small_desc">Learn how you can specify gradient as background on a box element.</p>
+					<p class="small_desc">Learn how you can specify gradient as background on a box element. This chapter explains how you can create a gradient background.</p>
 					<div class="tags">
 						<div>gradient</div>
 						<div>linear-gradient</div>
@@ -208,6 +208,36 @@
 						<div>Color Stops</div>
 						<div>Linear gradient direction</div>
 						<div>Radial gradient shape</div>
+						<div>Radial gradient size</div>
+					</div>
+				</li>
+				<li>
+					<a href="Background.html">Background</a>
+					<p class="small_desc">Learn how you can use image as a background and how you can handle different ways.</p>
+					<div class="tags">
+						<div>background-color</div>
+						<div>background-image</div>
+						<div>background fallback color</div>
+						<div>background-atttachment</div>
+						<div>background-clip</div>
+						<div>background-origin</div>
+						<div>background-position</div>
+						<div>background-repeat</div>
+						<div>background-size</div>
+						<div>cover</div>
+						<div>contain</div>
+						<div>shorthand property: background</div>
+					</div>
+				</li>
+				<li>
+					<a href="Shadow.html">Shadow</a>
+					<p class="small_desc">Learn how you can create shadow over text or box element.</p>
+					<div class="tags">
+						<div>text-shadow</div>
+						<div>box-shadow</div>
+						<div>Inner Shadow</div>
+						<div>inset</div>
+						<div>One Side Shadow</div>
 					</div>
 				</li>
 			</ol>
@@ -448,17 +478,6 @@
 	</div>
 
 	<div class="Card">
-		<h1>Shadow</h1>
-		<div class="Content">
-			<a href="Shadow.html">text-shadow</a>
-			<a href="Shadow.html">box-shadow</a>
-			<a href="Shadow.html">Inner Shadow</a>
-			<a href="Shadow.html">inset</a>
-			<a href="Shadow.html">One Side Shadow</a>
-		</div>
-	</div>
-
-	<div class="Card">
 		<h1>Float</h1>
 		<div class="Content">
 			<a href="Float.html">What is Float?</a>
@@ -481,19 +500,6 @@
 			<a href="Position.html">absolute</a>
 			<a href="Position.html">fixed</a>
 			<a href="Position.html">sticky</a>
-		</div>
-	</div>
-
-	<div class="Card">
-		<h1>Background</h1>
-		<div class="Content">
-			<a href="Background.html">background</a>
-			<a href="Background.html">background-image</a>
-			<a href="Background.html">background-clip</a>
-			<a href="Background.html">background-origin</a>
-			<a href="Background.html">background-position</a>
-			<a href="Background.html">background-repeat</a>
-			<a href="Background.html">background-size</a>
 		</div>
 	</div>
 
