--- a/CSS/TOC.html
+++ b/CSS/TOC.html
@@ -235,7 +235,6 @@
 					<div class="tags">
 						<div>text-shadow</div>
 						<div>box-shadow</div>
-						<div>Inner Shadow</div>
 						<div>inset</div>
 						<div>One Side Shadow</div>
 					</div>
@@ -244,48 +243,124 @@
 		</div>
 	</div>
 
-	<div class="Card">
-		<h1>Grid</h1>
-		<div class="Content">
-			<a href="Grid.html">Grid Terminology</a>
-			<a href="Grid.html">Grid Container</a>
-			<a href="Grid.html">Grid Item</a>
-			<a href="Grid.html">Grid Line</a>
-			<a href="Grid.html">Grid Track</a>
-			<a href="Grid.html">Grid Cell</a>
-			<a href="Grid.html">display:grid;</a>
-			<a href="Grid.html">grid-template-columns</a>
-			<a href="Grid.html">grid-template-rows</a>
-			<a href="Grid.html">repeat()</a>
-			<a href="Grid.html">The fr Unit</a>
-			<a href="Grid.html">Moving a grid item</a>
-			<a href="Grid.html">grid-column-start</a>
-			<a href="Grid.html">grid-column-end</a>
-			<a href="Grid.html">grid-row-start</a>
-			<a href="Grid.html">grid-row-end</a>
-			<a href="Grid.html">Spanning of Grid item</a>
-			<a href="Grid.html">grid-column</a>
-			<a href="Grid.html">grid-row</a>
-			<a href="Grid.html">grid-area</a>
-			<a href="Grid.html">grid-column-gap</a>
-			<a href="Grid.html">grid-row-gap</a>
-			<a href="Grid.html">grid-gap</a>
-			<a href="Grid.html">justify-content</a>
-			<a href="Grid.html">align-content</a>
-			<a href="Grid.html">justify-items</a>
-			<a href="Grid.html">align-items</a>
-			<a href="Grid.html">place-items</a>
-			<a href="Grid.html">place-content</a>
-			<a href="Grid.html">grid-template-areas</a>
-			<a href="Grid.html">grid-template</a>
-			<a href="Grid.html">span Keyword</a>
-			<a href="Grid.html">auto-fill keyword</a>
-			<a href="Grid.html">minmax()</a>
-			<a href="Grid.html">grid-auto-columns</a>
-			<a href="Grid.html">grid-auto-rows</a>
-			<a href="Grid.html">justify-self</a>
-			<a href="Grid.html">align-self</a>
-			<a href="Grid.html">place-self</a>
+	<div class="card table_of_content">
+		<h1>Display & Position</h1>
+		<div>
+			<ol>
+				<li>
+					<a href="Display.html">Display</a>
+					<p class="small_desc">In this section we will learn how we can handle different behaviour of CSS when it comes to displaying an element.</p>
+					<div class="tags">
+						<div>inline</div>
+						<div>inline-block</div>
+						<div>inset</div>
+						<div>One Side Shadow</div>
+						<div>Unwanted White-Space</div>
+						<div>line-height | font-size</div>
+						<div>block</div>
+						<div>none</div>
+						<div>table</div>
+						<div>table-cell</div>
+						<div>table-column</div>
+						<div>table-colgroup</div>
+						<div>table-header-group</div>
+						<div>table-row-group</div>
+						<div>table-footer-group</div>
+						<div>table-row</div>
+						<div>table-caption</div>
+						<div>flex</div>
+						<div>grid</div>
+					</div>
+				</li>
+				<li>
+					<a href="Flexbox.html">Flex Box</a>
+					<p class="small_desc">In this section we will learn how we can handle different behaviour of CSS when it comes to displaying an element.</p>
+					<div class="tags">
+						<div>Flexbox</div>
+						<div>display:flex;</div>
+						<div>flex-direction</div>
+						<div>flex-basis</div>
+						<div>flex-wrap</div>
+						<div>justify-content</div>
+						<div>align-items</div>
+						<div>flex-grow</div>
+						<div>flex-shrink</div>
+						<div>flex-flow</div>
+						<div>align-self</div>
+						<div>order</div>
+						<div>align-content</div>
+					</div>
+				</li>
+				<li>
+					<a href="Grid.html">Grid</a>
+					<p class="small_desc">In this section we will learn how we can handle different behaviour of CSS when it comes to displaying an element.</p>
+					<div class="tags">
+						<div>Grid Container</div>
+						<div>Grid Item</div>
+						<div>Grid Line</div>
+						<div>Grid Track</div>
+						<div>Grid Cell</div>
+						<div>display:grid;</div>
+						<div>grid-template-columns</div>
+						<div>grid-template-rows</div>
+						<div>repeat()</div>
+						<div>The fr Unit</div>
+						<div>Moving a grid item</div>
+						<div>grid-column-start</div>
+						<div>grid-column-end</div>
+						<div>grid-row-start</div>
+						<div>grid-row-end</div>
+						<div>Spanning of Grid item</div>
+						<div>grid-column</div>
+						<div>grid-row</div>
+						<div>grid-area</div>
+						<div>grid-column-gap</div>
+						<div>grid-row-gap</div>
+						<div>grid-gap</div>
+						<div>justify-content</div>
+						<div>align-content</div>
+						<div>justify-items</div>
+						<div>align-items</div>
+						<div>place-items</div>
+						<div>place-content</div>
+						<div>grid-template-areas</div>
+						<div>grid-template</div>
+						<div>span Keyword</div>
+						<div>auto-fill keyword</div>
+						<div>minmax()</div>
+						<div>grid-auto-columns</div>
+						<div>grid-auto-rows</div>
+						<div>justify-self</div>
+						<div>align-self</div>
+						<div>place-self</div>
+					</div>
+				</li>
+				<li>
+					<a href="Float.html">Float</a>
+					<p class="small_desc">In this section we will learn how we can handle different behaviour of CSS when it comes to displaying an element.</p>
+					<div class="tags">
+						<div>What is Float?</div>
+						<div>What are float used for?</div>
+						<div>Clearing Float</div>
+						<div>The Great Collapse</div>
+						<div>Techniques for Clearing Floats</div>
+						<div>Where you should use Clear Property?</div>
+						<div>Use of float</div>
+					</div>
+				</li>
+				<li>
+					<a href="Position.html">Position</a>
+					<p class="small_desc">In this section we will learn how we can handle different behaviour of CSS when it comes to displaying an element.</p>
+					<div class="tags">
+						<div>position</div>
+						<div>static</div>
+						<div>relative</div>
+						<div>absolute</div>
+						<div>fixed</div>
+						<div>sticky</div>
+					</div>
+				</li>
+			</ol>
 		</div>
 	</div>
 
@@ -326,30 +401,6 @@
 			<a href="Counters.html">Counter()</a>
 			<a href="Counters.html">counter-increment</a>
 			<a href="Counters.html">counter-reset</a>
-		</div>
-	</div>
-
-	<div class="Card">
-		<h1>Display</h1>
-		<div class="Content">
-			<a href="Display.html">Display</a>
-			<a href="Display.html">inline</a>
-			<a href="Display.html">inline-block</a>
-			<a href="Display.html">Unwanted White-Space</a>
-			<a href="Display.html">line-height | font-size</a>
-			<a href="Display.html">block</a>
-			<a href="Display.html">none</a>
-			<a href="Display.html">table</a>
-			<a href="Display.html">table-cell</a>
-			<a href="Display.html">table-column</a>
-			<a href="Display.html">table-colgroup</a>
-			<a href="Display.html">table-header-group</a>
-			<a href="Display.html">table-row-group</a>
-			<a href="Display.html">table-footer-group</a>
-			<a href="Display.html">table-row</a>
-			<a href="Display.html">table-caption</a>
-			<a href="Display.html">flex</a>
-			<a href="Display.html">grid</a>
 		</div>
 	</div>
 
@@ -476,55 +527,6 @@
 			<a href="Pseudo.html">:target</a>
 		</div>
 	</div>
-
-	<div class="Card">
-		<h1>Float</h1>
-		<div class="Content">
-			<a href="Float.html">What is Float?</a>
-			<a href="Float.html">What are float used for?</a>
-			<a href="Float.html">Clearing Float</a>
-			<a href="Float.html">The Great Collapse</a>
-			<a href="Float.html">Techniques for Clearing Floats</a>
-			<a href="Float.html">Where you should use Clear Property?</a>
-			<a href="Float.html">Use of float</a>
-		</div>
-	</div>
-
-
-	<div class="Card">
-		<h1>Position</h1>
-		<div class="Content">
-			<a href="Position.html">position</a>
-			<a href="Position.html">static</a>
-			<a href="Position.html">relative</a>
-			<a href="Position.html">absolute</a>
-			<a href="Position.html">fixed</a>
-			<a href="Position.html">sticky</a>
-		</div>
-	</div>
-
-	<div class="Card">
-		<h1>Flex Box</h1>
-		<div class="Content">
-			<a href="Flexbox.html">Flexbox</a>
-			<a href="Flexbox.html">display:flex;</a>
-			<a href="Flexbox.html">flex-direction</a>
-			<a href="Flexbox.html">flex-basis</a>
-			<a href="Flexbox.html">flex-wrap</a>
-			<a href="Flexbox.html">justify-content</a>
-			<a href="Flexbox.html">align-items</a>
-			<a href="Flexbox.html">flex-grow</a>
-			<a href="Flexbox.html">flex-shrink</a>
-			<a href="Flexbox.html">flex-flow</a>
-			<a href="Flexbox.html">align-self</a>
-			<a href="Flexbox.html">order</a>
-			<a href="Flexbox.html">align-content</a>
-		</div>
-	</div>
-
-	
-
-	
 	<div class="Skipping">
 		<div class="vertical-menu">
 			<a href="Skipping.html" class="active">Skipping</a>
