--- a/CSS/TOC.html
+++ b/CSS/TOC.html
@@ -10,12 +10,45 @@
 	<div class="card table_of_content">
 		<h1>Basics</h1>
 		<div>
-			<ul>
-				<li><a href="Syntax.html">Basic syntax for writting CSS Code</a></li>
-				<li><a href="Inclusion.html">Inclusion : Different ways of using CSS</a></li>
-				<li><a href="Selector.html">CSS Selectors, Combinators and Specificity</a></li>
-				<li><a href="Units.html">Units</a><br></li>
-			</ul>
+			<ol>
+				<li>
+					<a href="Introduction.html">Introduction</a>
+					<p class="small_desc">Lets explore the CSS doc. The first step of learning CSS. Basic knowledge to get started with CSS.</p>
+					<div class="tags">
+						<div>Basic syntax for writting CSS Code</div>
+						<div>How to write Comment in CSS Code</div>
+						<div>Inclusion : Different ways of using CSS</div>
+					</div>
+				</li>
+				<li>
+					<a href="Selector.html">Selectors</a>
+					<p class="small_desc">CSS Selectors, Combinators and Specificity. Learn how you can apply CSS to specific HTML element. Learn how to specify a particular HTML dom with css selector.</p>
+					<div class="tags">
+						<div>Class selectors</div>
+						<div>ID selectors</div>
+						<div>The universal selector</div>
+						<div>Element Selectors</div>
+						<div>Dot Operator</div>
+						<div>Comma Operator</div>
+						<div>Space Operator</div>
+						<div>Greater than Operator</div>
+						<div>Addition Operator</div>
+						<div>Tile Operator</div>
+						<div>Attribute Selector</div>
+						<div>Attribute with Value Selector</div>
+						<div>Combinators</div>
+						<div>Specificity</div>
+					</div>
+				</li>
+				<li>
+					<a href="Units.html">Units</a>
+					<p class="small_desc">Learn how you can specify different units with value.</p>
+					<div class="tags">
+						<div>Absolute Units</div>
+						<div>Relative Units</div>
+					</div>
+				</li>
+			</ol>
 		</div>
 	</div>
 
@@ -364,6 +397,156 @@
 		</div>
 	</div>
 
+	<div class="card table_of_content">
+		<h1>Pseudo Class & Element</h1>
+		<div>
+			<ol>
+				<li>
+					<a href="Pseudo.html">Pseudo Class</a>
+					<p class="small_desc">Learn about Pseudo class</p>
+					<div class="tags">
+						<div>Pseudo Classes</div>
+						<div>:active</div>
+						<div>:hover</div>
+						<div>:visited</div>
+						<div>:empty</div>
+						<div>:blank</div>
+						<div>:first-child</div>
+						<div>:last-child</div>
+						<div>:nth-child</div>
+						<div>:nth-last-child</div>
+						<div>:in-range</div>
+						<div>:invalid</div>
+						<div>:valid</div>
+						<div>:checked</div>
+						<div>:disabled</div>
+						<div>:focus</div>
+						<div>:link</div>
+						<div>:not</div>
+						<div>:nth-of-type</div>
+						<div>:only-of-type</div>
+						<div>:only-child</div>
+						<div>:optional</div>
+						<div>:out-of-range</div>
+						<div>:read-only</div>
+						<div>:read-write</div>
+						<div>:required</div>
+						<div>:root</div>
+						<div>:target</div>
+					</div>
+				</li>
+				<li>
+					<a href="PseudoElement.html">Pseudo Elements</a>
+					<p class="small_desc">Learn about Pseudo Elements</p>
+					<div class="tags">
+						<div>Pseudo Element</div>
+						<div>::after</div>
+						<div>::before</div>
+						<div>::first-letter</div>
+						<div>::first-line</div>
+						<div>::selection</div>
+						<div>content</div>
+					</div>
+				</li>
+			</ol>
+		</div>
+	</div>
+
+	<div class="card table_of_content">
+		<h1>Animations</h1>
+		<div>
+			<ol>
+				<li>
+					<a href="Transform.html">Transform</a>
+					<p class="small_desc">Learn about Transform</p>
+					<div class="tags">
+						<div>Transform</div>
+						<div>Scale</div>
+						<div>Skew</div>
+						<div>Translate</div>
+						<div>Rotate</div>
+						<div>Multiple Transform</div>
+						<div>transform-origin</div>
+					</div>
+				</li>
+				<li>
+					<a href="Transitions.html">Transition</a>
+					<p class="small_desc">Learn about Transitions</p>
+					<div class="tags">
+						<div>Transform</div>
+						<div>Scale</div>
+						<div>Skew</div>
+						<div>Translate</div>
+						<div>Rotate</div>
+						<div>Multiple Transform</div>
+						<div>transform-origin</div>
+					</div>
+				</li>
+				<li>
+					<a href="Animation.html">Animation</a>
+					<p class="small_desc">Learn about Animations</p>
+					<div class="tags">
+						<div>Animation</div>
+						<div>Keyframes</div>
+						<div>animation-name</div>
+						<div>animation-duration</div>
+						<div>animation-delay</div>
+						<div>animation-timing-function</div>
+						<div>Animation-iteration-count</div>
+						<div>animation-fill-mode</div>
+						<div>animation-play-state</div>
+						<div>animation</div>
+						<div>Add Multiple Animation</div>
+						<div>Multiple steps</div>
+						<div>from-to</div>
+					</div>
+				</li>
+			</ol>
+		</div>
+	</div>
+
+	<div class="card table_of_content">
+		<h1>Styling Elements</h1>
+		<div>
+			<ol>
+				<li>
+					<a href="Tables.html">Tables</a>
+					<p class="small_desc">Learn about Tables</p>
+					<div class="tags">
+						<div>Styling Table</div>
+						<div>Table Borders</div>
+						<div>border-collapse</div>
+						<div>Table Width and Height</div>
+						<div>Horizontal Alignment</div>
+						<div>Vertical Alignment</div>
+						<div>Table Padding</div>
+						<div>Horizontal Dividers</div>
+						<div>Hoverable Table</div>
+						<div>Striped Table</div>
+						<div>Responsive Table</div>
+						<div>border-spacing</div>
+						<div>caption-side</div>
+						<div>empty-cells</div>
+						<div>table-layout</div>
+					</div>
+				</li>
+
+				<li>
+					<a href="LinksAndLists.html">Links and Lists</a>
+					<p class="small_desc">Learn about Links and Lists</p>
+					<div class="tags">
+						<div>Links</div>
+						<div>list-style-type</div>
+						<div>list-style-image</div>
+						<div>list-style-position</div>
+						<div>list-style</div>
+						<div>Remove Default Settings</div>
+					</div>
+				</li>
+			</ol>
+		</div>
+	</div>
+
 	<div class="Card">
 		<h1>Properties - I</h1>
 		<div class="Content">
@@ -404,129 +587,8 @@
 		</div>
 	</div>
 
-	<div class="Card">
-		<h1>Tables</h1>
-		<div class="Content">
-			<a href="Tables.html">Styling Table</a>
-			<a href="Tables.html">Table Borders</a>
-			<a href="Tables.html">border-collapse</a>
-			<a href="Tables.html">Table Width and Height</a>
-			<a href="Tables.html">Horizontal Alignment</a>
-			<a href="Tables.html">Vertical Alignment</a>
-			<a href="Tables.html">Table Padding</a>
-			<a href="Tables.html">Horizontal Dividers</a>
-			<a href="Tables.html">Hoverable Table</a>
-			<a href="Tables.html">Striped Table</a>
-			<a href="Tables.html">Responsive Table</a>
-			<a href="Tables.html">border-spacing</a>
-			<a href="Tables.html">caption-side</a>
-			<a href="Tables.html">empty-cells</a>
-			<a href="Tables.html">table-layout</a>
-		</div>
-	</div>
+	
 
-	<div class="Card">
-		<h1>Links and Lists</h1>
-		<div class="Content">
-			<a href="LinksAndLists.html">Links</a>
-			<a href="LinksAndLists.html">list-style-type</a>
-			<a href="LinksAndLists.html">list-style-image</a>
-			<a href="LinksAndLists.html">list-style-position</a>
-			<a href="LinksAndLists.html">list-style</a>
-			<a href="LinksAndLists.html">Remove Default Settings</a>
-		</div>
-	</div>
-
-	<div class="Card">
-		<h1>Animation</h1>
-		<div class="Content">
-			<a href="Animation.html">Animation</a>
-			<a href="Animation.html">Keyframes</a>
-			<a href="Animation.html">animation-name</a>
-			<a href="Animation.html">animation-duration</a>
-			<a href="Animation.html">animation-delay</a>
-			<a href="Animation.html">animation-timing-function</a>
-			<a href="Animation.html">Animation-iteration-count</a>
-			<a href="Animation.html">animation-fill-mode</a>
-			<a href="Animation.html">animation-play-state</a>
-			<a href="Animation.html">animation</a>
-			<a href="Animation.html">Add Multiple Animation</a>
-			<a href="Animation.html">Multiple steps</a>
-			<a href="Animation.html">from-to</a>
-		</div>
-	</div>
-
-	<div class="Card">
-		<h1>Transition</h1>
-		<div class="Content">
-			<a href="Transitions.html">About Transitions</a>
-			<a href="Transitions.html">transition-property</a>
-			<a href="Transitions.html">transition-duration</a>
-			<a href="Transitions.html">transition-delay</a>
-			<a href="Transitions.html">transition-timing-function</a>
-			<a href="Transitions.html">transition</a>
-		</div>
-	</div>
-
-	<div class="Card">
-		<h1>Transform</h1>
-		<div class="Content">
-			<a href="Transform.html">Transform</a>
-			<a href="Transform.html">Scale</a>
-			<a href="Transform.html">Skew</a>
-			<a href="Transform.html">Translate</a>
-			<a href="Transform.html">Rotate</a>
-			<a href="Transform.html">Multiple Transform</a>
-			<a href="Transform.html">transform-origin</a>
-		</div>
-	</div>
-
-	<div class="Card">
-		<h1>Pseudo Elements</h1>
-		<div class="Content">
-			<a href="PseudoElement.html">Pseudo Element</a>
-			<a href="PseudoElement.html">::after</a>
-			<a href="PseudoElement.html">::before</a>
-			<a href="PseudoElement.html">::first-letter</a>
-			<a href="PseudoElement.html">::first-line</a>
-			<a href="PseudoElement.html">::selection</a>
-			<a href="PseudoElement.html">content</a>
-		</div>
-	</div>
-
-	<div class="Card">
-		<h1>Pseudo Class</h1>
-		<div class="Content">
-			<a href="Pseudo.html">Pseudo Classes</a>
-			<a href="Pseudo.html">:active</a>
-			<a href="Pseudo.html">:hover</a>
-			<a href="Pseudo.html">:visited</a>
-			<a href="Pseudo.html">:empty</a>
-			<a href="Pseudo.html">:blank</a>
-			<a href="Pseudo.html">:first-child</a>
-			<a href="Pseudo.html">:last-child</a>
-			<a href="Pseudo.html">:nth-child</a>
-			<a href="Pseudo.html">:nth-last-child</a>
-			<a href="Pseudo.html">:in-range</a>
-			<a href="Pseudo.html">:invalid</a>
-			<a href="Pseudo.html">:valid</a>
-			<a href="Pseudo.html">:checked</a>
-			<a href="Pseudo.html">:disabled</a>
-			<a href="Pseudo.html">:focus</a>
-			<a href="Pseudo.html">:link</a>
-			<a href="Pseudo.html">:not</a>
-			<a href="Pseudo.html">:nth-of-type</a>
-			<a href="Pseudo.html">:only-of-type</a>
-			<a href="Pseudo.html">:only-child</a>
-			<a href="Pseudo.html">:optional</a>
-			<a href="Pseudo.html">:out-of-range</a>
-			<a href="Pseudo.html">:read-only</a>
-			<a href="Pseudo.html">:read-write</a>
-			<a href="Pseudo.html">:required</a>
-			<a href="Pseudo.html">:root</a>
-			<a href="Pseudo.html">:target</a>
-		</div>
-	</div>
 	<div class="Skipping">
 		<div class="vertical-menu">
 			<a href="Skipping.html" class="active">Skipping</a>
